# halo2-verifier.move

./: .gitignore  Move.toml  README.md  TUTORIAL.md
.aptos/: config.yaml
.github/workflows/: ci.yml
api/: Move.toml
api/sources/: verifier_api.move
crates/: Cargo.toml
crates/circuit-info-generator/: Cargo.toml
crates/circuit-info-generator/src/: lib.rs  serialize.rs
crates/multipoly/src/: lib.rs
crates/multipoly/src/multivariate/: sparse.rs
crates/verifier-sdk/: Cargo.toml  README.md
crates/verifier-sdk/aptos-verifier-api/: Cargo.toml
crates/verifier-sdk/aptos-verifier-api/src/: lib.rs  proving.rs  types.rs
crates/verifier-sdk/multipoly/: Cargo.toml
crates/verifier-sdk/multipoly/src/: lib.rs  main.rs
crates/verifier-sdk/multipoly/src/multivariate/: mod.rs  sparse.rs
crates/verifier-sdk/shape-generator/: Cargo.toml
crates/verifier-sdk/shape-generator/src/: lib.rs  serialize.rs  test.rs
crates/vk-gen-examples/: .env  Cargo.toml  README.md  SimpleExample-publish-circuit.json  SimpleExample-verify-proof-gwc.json  VectorMul-verify-proof-shplonk.json  ZkEmail-publish-circuit.json
crates/vk-gen-examples/params/: README.md
crates/vk-gen-examples/proofs/: VectorMul-06661ff6e3bd260e8dc4f9096034eaf96782d3fe.json
crates/vk-gen-examples/src/: lib.rs  main.rs  proof.rs  proofs.rs  to_ark.rs
crates/vk-gen-examples/src/examples/: circuit_layout.rs  is_zero.rs  mod.rs  serialization.rs  shuffle.rs  shuffle_api.rs  simple_example.rs  two_chip.rs  vector_mul.rs  zk_email.rs
crates/vk-gen-examples/vk_deployment/: CircuitLayout.json  VectorMul.json
crates/vk-gen-examples/zkemail/configs/: app_bench.config  app_recursion_bench.config  default_app.config  test1_email_verify.config  test2_email_verify.config  test_ex1_email_verify.config  test_ex2_email_verify.config
doc/: is-zero.md
scripts/: protocol_deserialization_example.move  verify_example.move
sources/: arithmetic.move  base.move  blake2b.move  bn254_algebra.move  bn254_arithmetic.move  bn254_test.move  bn254_types.move  bn254_utils.move  column.move  column_query.move  common_evaluations.move  domain.move  expression.move  gwc.move  halo2_verifier.move  i32.move  keccak256.move  lookup.move  msm.move  multivariate_poly.move  params.move  pcs.move  permutation.move  plonk_proof.move  plonk_verifier.move  point.move  polys.move  protocol.move  protocol_store_example.move  query.move  rotation.move  scalar.move  transcript.move  transcript_blake2b.move  vanishing.move  vec_utils.move  verifier_test.move  verify_key.move
tests/: verifier_test.move
tools/circuit-info-generator/: Cargo.toml
tools/circuit-info-generator/src/: lib.rs
tools/multipoly/: Cargo.toml
