[package]
name = "circuit-info-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2023_04_20" }
bcs = { version = "0.1.6" }
blake2b_simd = { version = "1" }
multipoly = {path = "../multipoly"}