[package]
name = "vk-gen-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "=4.2.1", features = ["derive"] }
colored = { version = "=2.0.4" }
cargo-platform = { version = "=0.1.5" }
ahash = { version = "=0.8.4" }
curve25519-dalek = { version = "=4.0.0" }
bumpalo = { version = "=3.14.0" }
anyhow = { version = "1.0.75" }
serde = { version = "1" }
serde_json = { version = "1" }
hex = { version = "0.4.3" }
toml = { version = "0.8.8" }
rand_core = { version = "0.6.4" }
rand = { version = "0.8.5" }
ark-bn254 = { version = "0.4.0" }
ark-serialize = { version = "0.4" }
ark-ec = { version = "0.4" }


halo2-base = { version = "0.2.2", default-features = false, features = [
    "halo2-pse",
    "display",
], git = "https://github.com/axiom-crypto/halo2-lib.git", rev = "9860acc" }
halo2-ecc = { version = "0.2.2", default-features = false, features = [
    "halo2-pse",
    "display",
], git = "https://github.com/axiom-crypto/halo2-lib.git", rev = "9860acc" }
halo2-zk-email = { git = "https://github.com/zhmolly/halo2-zk-email", rev = "d3306d3" }

shape-generator = { path = "../verifier-sdk/shape-generator" }
num-bigint = "0.4.4"
dotenv = "0.15.0"
tokio = "1.36.0"
cfdkim = { version = "0.3.0", git = "https://github.com/SoraSuegami/dkim.git" }
slog = "2.7.0"
rsa = { version = "0.9.6", features = ["serde", "sha2"] }

[patch."https://github.com/privacy-scaling-explorations/halo2.git"]
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations//halo2.git", tag = "v2023_02_02" }
