[package]
name = "vk-gen-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shape-generator = {path = "../verifier-sdk/shape-generator" }
clap = { version = "4.4.10",features = ["derive"] }
anyhow = { version = "1.0.75" }
serde = { version = "1" }
serde_json = { version = "1" }
hex = { version = "0.4.3" }
toml = { version = "0.8.8" }
rand_core = { version = "0.6.4" }
rand = { version = "0.8.5" }
halo2_proofs = { git = "https://github.com/zkmove/halo2.git", branch = "zkmove", default-features = false, features = ["batch", "bits"] }
halo2_backend = { git = "https://github.com/zkmove/halo2.git", branch = "zkmove" }
ark-bn254 = { version = "0.4.0" }
ark-serialize = { version = "0.4" }
ark-ec = { version = "0.4" }


#[patch."https://github.com/zkmove/halo2.git"]
#halo2_proofs = { path = "../../../halo2/halo2_proofs" }
#halo2_backend = { path = "../../../halo2/halo2_backend" }

#[patch."https://github.com/zkmove/halo2curves"]
#halo2curves = { path = "../../../halo2curves" }