[package]
name = "multipoly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ff = { version = "0.13.0" }
num-traits = { version = "0.2.17" }
derivative = { version = "2.2.0" }
rand = { version = "0.8.5" }