[package]
name = "multipoly"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ff.workspace=true
num-traits.workspace=true
derivative.workspace=true
rand.workspace=true

ark-bn254 = "0.4.0"
ark-ec = "0.4.0"
ark-ff = "0.4.0"
ark-groth16 = "0.4.0"
ark-serialize = "0.4.0"
ark-std = { version = "0.4.0", features = ["getrandom"] }
hex = "0.4.3"

group = "0.13"
halo2curves = { path = "../../../../halo2curves" }