[package]
name = "shape-generator"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2_proofs.workspace=true
halo2_frontend.workspace=true
halo2_backend.workspace=true
halo2_middleware.workspace=true
bcs.workspace=true
blake2b_simd.workspace=true
multipoly.workspace=true