[package]
name = "shape-generator"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2_proofs.workspace=true
halo2_frontend.workspace=true
halo2_backend.workspace=true
halo2_middleware.workspace=true
bcs.workspace=true
blake2b_simd.workspace=true
#multipoly.workspace=true
halo2curves.workspace=true

ark-bn254 = "0.4.0"
ark-ec = "0.4.0"
ark-ff = "0.4.0"
ark-serialize = "0.4.0"
hex = "0.4.3"
group = "0.13"